--- a/index.html
+++ b/index.html
@@ -50,16 +50,55 @@
             midnight party
           </h1>
           <small
-            >Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br>
+            >Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            <br />
             molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
             euismod.
           </small>
-          <br>
+          <br />
           <button>Join Now</button>
         </div>
         <div class="party-img">
-            <img src="./images/Group 70.png" alt="">
+          <img src="./images/Group 70.png" alt="" />
         </div>
+      </section>
+      <!-- party section end -->
+
+      <!-- thard part section -->
+      <section class="thard-part">
+        <h1>
+          <span>Place:</span> New Park Hotel <br />
+          <span>Date:</span> 31 December Night 2023 <br />
+          <span>Time:</span> Evening 7.30 pm to 12.30 am
+        </h1>
+        <button>Join Now</button>
+      </section>
+
+      <!--  thard part section end -->
+
+      <!-- froth part section -->
+      <section class="froth-container">
+        <div class="froth-part">
+          <div class="froth-info">
+            <span>NEW BEST OFFER</span>
+            <h1>Coming Soon</h1>
+            <small
+              >Dolor sit amet consectetur. Consequat eget consectetur  maecenas 
+              sed molestie malesuada. Ipsum sed sodales   risus ut pellentesque
+              vel euismod.
+            </small>
+          </div>
+          <div class="froth-img-container">
+          <div class="froth-img">
+
+          </div>
+          </div>
+          <div class="froth-text">
+            <h1>2024</h1>
+            <small>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</small>
+            <div class="froth-text-img"></div>
+        </div>
+    </div>
       </section>
     </main>
   </body>
