--- a/index.html
+++ b/index.html
@@ -43,24 +43,26 @@
 
       <!-- party section start-->
 
-      <section class="party">
+      <section class="party-container">
+     <div class="party">
         <div class="party-text">
-          <h1>
-            Welcome to <br />
-            midnight party
-          </h1>
-          <small
-            >Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            <h1>
+              Welcome to <br />
+              midnight party
+            </h1>
+            <small
+              >Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+              <br />
+              molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+              euismod.
+            </small>
             <br />
-            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
-            euismod.
-          </small>
-          <br />
-          <button>Join Now</button>
-        </div>
-        <div class="party-img">
-          <img src="./images/Group 70.png" alt="" />
-        </div>
+            <button>Join Now</button>
+          </div>
+          <div class="party-img">
+            <img src="./images/Group 70.png" alt="" />
+          </div>
+     </div>
       </section>
       <!-- party section end -->
 
@@ -80,7 +82,7 @@
       <section class="froth-container">
         <div class="froth-part">
           <div class="froth-info">
-            <span>NEW BEST OFFER</span>
+            <span >NEW BEST OFFER</span>
             <h1>Coming Soon</h1>
             <small
               >Dolor sit amet consectetur. Consequat eget consectetur  maecenas 
